--- a/source/did-verifier-server/src/main/resources/config/application-verifier.yml
+++ b/source/did-verifier-server/src/main/resources/config/application-verifier.yml
@@ -3,6 +3,6 @@ verifier:
   did: did:omn:verifier
   cert-vc-ref: "${verifier.domain}/verifier/api/v1/certificate-vc"
   ref: "${verifier.domain}/swagger-ui/index.html#/"
-  sample-path: "source/did-verifier-server/sample/data/vpPolicy"
+  sample-path: "sample/data/vpPolicy"
   verifier-end-points: "${verifier.domain}/verifier/api/v1/request-verify"
   valid-seconds : 180
